swiss-crypto: added tests